<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    tools:context=".NewOrderActivity">

    <ImageView
        android:id="@+id/rachelLogo"
        android:layout_width="188dp"
        android:layout_height="144dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/rachel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/rachel" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rachelSandwich" />

    <TextView
        android:id="@+id/rachelSandwich"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:fontFamily="cursive"
        android:text="@string/program_name"
        android:textColor="#2d004d"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rachelLogo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:hint="@string/name_edit_hint"
        android:maxLines="1"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nameField"
        app:layout_constraintStart_toEndOf="@id/nameField"
        app:layout_constraintTop_toTopOf="@+id/nameField" />

    <TextView
        android:id="@+id/pickles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/pickles"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/hummus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/hummus"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickles" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/tahini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/tahini"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hummus" />

    <TextView
        android:id="@+id/commentsField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/comments"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tahini" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="casual"
        android:hint="@string/your_comments"
        android:textColor="@color/font_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/commentsField"
        app:layout_constraintTop_toBottomOf="@+id/tahini" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/zero"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/minus"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pickles"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/plus"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comments"
        app:layout_constraintTop_toBottomOf="@+id/comments"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/send_order_button" />

</androidx.constraintlayout.widget.ConstraintLayout>