<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    tools:context=".DoneActivity">

    <ImageView
        android:id="@+id/rachelLogo"
        android:layout_width="188dp"
        android:layout_height="144dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rachel"
        tools:srcCompat="@drawable/rachel"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="casual"
        android:text="@string/welcome_greeting"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rachelSandwich" />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/order_ready"
        android:textAlignment="center"
        android:textColor="#2d004d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <TextView
        android:id="@+id/rachelSandwich"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:fontFamily="cursive"
        android:text="@string/program_name"
        android:textColor="#2d004d"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rachelLogo" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/doneGif"
        android:layout_width="414dp"
        android:layout_height="331dp"
        android:src="@drawable/donegif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanation"
        app:layout_constraintVertical_bias="0.126"
        tools:srcCompat="@drawable/donegif" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/doneGif"
        app:layout_constraintTop_toBottomOf="@+id/doneGif"
        app:srcCompat="@drawable/gotit"
        tools:srcCompat="@drawable/gotit"
        android:contentDescription="@string/gotit_buttom" />

</androidx.constraintlayout.widget.ConstraintLayout>